crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__items_tuple_additional_and_contains.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"additionalItems\":{\"type\":\"integer\"},\"contains\":{\"type\":\"string\"},\"items\":[{\"type\":\"integer\"}],\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                ((arr
                    .get(0usize)
                    .map_or(
                        true,
                        |instance| match instance {
                            serde_json::Value::Number(n) => {
                                jsonschema::__private::types::is_integer(n)
                            }
                            _ => false,
                        },
                    ))
                    && (arr
                        .iter()
                        .skip(1usize)
                        .all(|instance| match instance {
                            serde_json::Value::Number(n) => {
                                jsonschema::__private::types::is_integer(n)
                            }
                            _ => false,
                        }))) && (arr.iter().any(|instance| instance.is_string()))
            }
            _ => false,
        }
