crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__items_tuple_with_true_member.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"items\":[true,{\"type\":\"integer\"}],\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                arr.get(1usize)
                    .map_or(
                        true,
                        |instance| match instance {
                            serde_json::Value::Number(n) => {
                                jsonschema::__private::types::is_integer(n)
                            }
                            _ => false,
                        },
                    )
            }
            _ => false,
        }
