crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__max_items_scientific_fraction_arbitrary.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-06/schema#\",\"maxItems\":1.5e+2,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => (arr.len() as u64) <= 150,
            _ => false,
        }
