crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__max_length.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"maxLength\":10,\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => (s.chars().count() as u64) <= 10,
            _ => false,
        }
